plf/src/snapshot_tests/snapshots/plf__snapshot_tests__parser__parser_components_definition_success@basic.txt.snap
---
source: plf/src/snapshot_tests/parser.rs
expression: "components[0]"
input_file: plf/src/snapshot_tests/parser_inputs/success/components/def/basic.txt
---
ComponentDefinition {
    name: "array",
    kwargs: {
        "array": ComponentArgument {
            default: Some(
                Array([]),
            ),
            typ: Some(
                Array,
            ),
        },
        "array_of_maps": ComponentArgument {
            default: Some(
                Array([Map({String("hello"): I64(1)})]),
            ),
            typ: Some(
                Array,
            ),
        },
        "map": ComponentArgument {
            default: Some(
                Map({}),
            ),
            typ: Some(
                Map,
            ),
        },
    },
    rest_param_name: None,
    metadata: {},
    body: [
        "Hello",
    ],
}
