plf/src/snapshot_tests/snapshots/plf__snapshot_tests__parser__parser_components_render_success@render_body.txt.snap
---
source: plf/src/snapshot_tests/parser.rs
expression: Expressions(expr_nodes)
input_file: plf/src/snapshot_tests/parser_inputs/success/components/render_body.txt
---
<button{with: arg, and: 1}>["Hello"]<button/>
