plf/src/snapshot_tests/snapshots/plf__snapshot_tests__parser__parser_errors@array_dimensions.txt.snap
---
source: plf/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: plf/src/snapshot_tests/parser_inputs/errors/array_dimensions.txt
---
error: Arrays can have a maximum of 2 dimensions.
 --> array_dimensions.txt:1:6
  |
1 | {{ [[[1], [2]], [true]] }}
  |      ^
