plf/src/snapshot_tests/snapshots/plf__snapshot_tests__parser__parser_errors@assign_reserved_keywords.txt.snap
---
source: plf/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: plf/src/snapshot_tests/parser_inputs/errors/assign_reserved_keywords.txt
---
error: break is a reserved keyword of Tera, it cannot be assigned to.
 --> assign_reserved_keywords.txt:1:7
  |
1 | {% set break = false %}
  |        ^^^^^
